--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-auth": "^4.23.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "tailwind-merge": "^1.14.0",
